[package]
name = "crest"
version = "0.3.4"
authors = ["Pablo Couto <pablo@uncharted.space>"]

description = "A REST client library."
documentation = "https://pablocouto.github.io/crest/crest/index.html"
repository = "https://github.com/pablocouto/crest"
readme = "README.md"
keywords = ["rest", "client"]
license = "Apache-2.0/MIT"

[badges]
travis-ci = { repository = "pablocouto/crest" }
is-it-maintained-issue-resolution = { repository = "pablocouto/crest" }
is-it-maintained-open-issues = { repository = "pablocouto/crest" }

[dependencies]
hyper = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "0.5"
