[package]
name = "crest"
version = "0.1.0"
authors = ["Pablo Couto <pablo@uncharted.space>"]
license = "LGPL-3.0"
publish = false

description = "A REST client library."
documentation = "https://pablocouto.github.io/crest/crest/index.html"
repository = "https://github.com/pablocouto/crest"
keywords = ["rest", "client"]

[badges]
travis-ci = { repository = "pablocouto/crest" }
is-it-maintained-issue-resolution = { repository = "pablocouto/crest" }
is-it-maintained-open-issues = { repository = "pablocouto/crest" }

[dependencies]
error-chain = "0.10"
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1"
native-tls = "0.1"
num_cpus = "1.6"
tokio-core = "0.1"
tokio-timer = "0.1"
url = "1.5"

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"